--- a/GitHubSearch/Base.lproj/Main.storyboard
+++ b/GitHubSearch/Base.lproj/Main.storyboard
@@ -117,11 +117,40 @@
                         <outlet property="searchTextField" destination="Egs-qx-tsC" id="gAP-nX-nLN"/>
                         <outlet property="sortSegmentControl" destination="cKr-RG-5y5" id="Mhi-Nk-Tk7"/>
                         <outlet property="tableview" destination="Njd-Rl-qgz" id="sNP-63-Jbz"/>
+                        <segue destination="9vW-Pt-5fM" kind="show" identifier="showAboutSegue" id="ZpF-pt-iWS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-383.19999999999999" y="-125.4872563718141"/>
+            <point key="canvasLocation" x="-433" y="-125"/>
+        </scene>
+        <!--About Table View Controller-->
+        <scene sceneID="vxq-YW-5d0">
+            <objects>
+                <tableViewController id="9vW-Pt-5fM" customClass="AboutTableViewController" customModule="GitHubSearch" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="qeJ-3F-w1p">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="U4d-IV-pLD">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="U4d-IV-pLD" id="5FT-71-e5G">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="9vW-Pt-5fM" id="Vgc-35-qTc"/>
+                            <outlet property="delegate" destination="9vW-Pt-5fM" id="tg4-WR-eP7"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eVT-j7-tUB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="426" y="-125"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="LHf-me-mWG">
